# skill-centric-agent-system

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  HANDOVER.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml
.streamlit/: config.toml
docs/: README.md  agent-prompt-dkh-crm-migration.md  architecture.md  contracts.md  data-governance.md  environment-separation.md  error-taxonomy.md  infrastructure-boundary.md  migration-dkh-crm-nextjs.md  module-contracts.md  operations-runbook.md  production-readiness.md  registries.md  repository-roadmap.md  review-gates.md  runtime-api.md  runtime-contract.md  runtime-live-dev-e2e.md  runtime-preflight.md  threat-model.md
registry/: README.md
schemas/: automatic-rollback-rules.schema.json  capability-delta-transition-policy.schema.json  capability-gap-candidate.schema.json  cloudflare-control-plane.schema.json  composition-context.schema.json  contrastive-pair.schema.json  crm-skill-pack.schema.json  environment-manifest.schema.json  error-classification.schema.json  formal-safety-change-type-matrix.schema.json  hetzner-runtime-plane.schema.json  hooks-usage-model.schema.json  intent-transition-shadow-thresholds.schema.json  knowledge-quality-policy.schema.json  knowledge-record-proposal.schema.json  lesson-attribution-record.schema.json  lesson-relationship-graph.schema.json  memory-candidate-classification.schema.json  memory-operations-evidence.schema.json  memory-safety-evaluation.schema.json  module.schema.json  notion-issue-comment-audit.schema.json  planner-memory-selection-record.schema.json  policy-denial-ledger.schema.json  production-recertification-policy.schema.json  production-security-closure.schema.json  production-skill-instruction-packs.schema.json  production-telemetry-policy.schema.json  production-telemetry-snapshot.schema.json  retrieval-context.schema.json  runtime-api.schema.json  runtime-output.schema.json  runtime-profile.schema.json  shadow-regression-thresholds.schema.json  skill-handler-coverage.schema.json  skill-handler-version-policy.schema.json  structured-evidence-extraction-decision.schema.json  tenant-registry.schema.json  tenant-runtime-evidence.schema.json  transition-evidence.schema.json  (+1 more)
tests/: contract_schema_support.py  runtime_gateway_support.py  tenant_authority_support.py  test_automatic_rollback_rules.py  test_capability_delta_transition_policy.py  test_capability_gap_candidates.py  test_cloudflare_control_api_scaffold.py  test_dkh_ios_app.py  (+93 more)
(+591 files in other folders)
