[project]
name = "skill-centric-agent-system"
version = "0.1.0"
description = "Skill-centric, self-composing single-agent runtime contracts and implementation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "jsonschema>=4.22",
    "mypy>=1.11",
    "pytest>=8.2",
    "ruff>=0.5",
]
runtime = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
scas-runtime = "skill_centric_agent_system.runtime.cli:main"
scas-runtime-start = "skill_centric_agent_system.runtime.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/skill_centric_agent_system"]
warn_unreachable = true
warn_redundant_casts = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["psycopg.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
